Modified photons and the control panel background in order to make the photons more visible.
Fixed an issue where the edges of the UV photon were being cut off.
# 3.01.11 (47962) Jan 14, 2011
1/14/11 Deploying to dev with slower photon emssion rate for interview testing.
Slowed down the max photon emission rate to about half of what it had been.
Removed spectrum from M&L control panel, did other layout changes.
# 3.02.00 (47704) Jan 5, 2011
# 3.01.10 (47703) Jan 5, 2011
> Made thermometer graphic remain a fixed size, see #2647
> Fixed: thermometer fluid level depends on screen size but not thermometer size, see #2647
# 3.01.09 (47694) Jan 5, 2011
1/5/11 Publishing a version to dev for review of a bug fix, see #2641.
Fixed a bug where invisible photons were not getting reflected by ice on the earth, see #2641.
Added commented-out implementation of model-based ice/photon collisions
Reverted changes from 47665, did not seem to relate to the problem
# 3.01.09 (47667) Jan 4, 2011
Fixes for #2641
-Override PhotonGraphic.paint to respect visibility flag
-Always add graphic to drawingCanvas in BaseGreenhouseModule.PhotonEmitterListener.photonEmitted, since omission from the drawingCanvas (even when invisible) causes unfuddle bug #2641
-These fixes may cause more problems than they fix, they should be reviewed by JB and KP
# 3.01.07 (47548) Dec 30, 2010
12/30/10 Deploying to dev for review.
Molecules & Light: Made the radio buttons larger for the wavelength selector.
Molecules & Light: Made the arrow indicators interactive, i.e. the move the frequency up and down.
# 3.01.06 (47363) Dec 21, 2010
12/21/10 Deploying to dev to enable review of Molecules and Light.
Finished i18n of Molecules & Light sim.
Internationalized the Molecules & Light control panel and "Return Molecule" button.
Permanently removed the "flash" graphic, which flashed when photons were re-emitted by atmosphere.  It was previously commented out.